--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Server
+application.vendor=Chuong Tran
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,12 @@ dist.jar=${dist.dir}/Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Server
+endorsed.classpath=
 excludes=
 file.reference.jackson-annotations-2.10.1.jar=lib\\jackson-annotations-2.10.1.jar
 file.reference.jackson-core-2.10.1.jar=lib\\jackson-core-2.10.1.jar
 file.reference.jackson-databind-2.10.1.jar=lib\\jackson-databind-2.10.1.jar
-file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\84702\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar=lib\\mysql-connector-j-8.3.0.jar
 file.reference.netty-buffer-4.1.44.Final.jar=lib\\netty-buffer-4.1.44.Final.jar
 file.reference.netty-codec-4.1.44.Final.jar=lib\\netty-codec-4.1.44.Final.jar
 file.reference.netty-codec-http-4.1.44.Final.jar=lib\\netty-codec-http-4.1.44.Final.jar
